# redirect-service-test

./: README.md  app.py  pyproject.toml
tests/: test_redirect_service.py
