[tool.poetry]
name = "redirect-service-test"
version = "0.1.0"
description = ""
authors = ["Sergey Matvienko <spirit.q2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
